document/OCR loading functions

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,10 @@ rpds-py==0.20.0
 sniffio==1.3.1
 tqdm==4.66.5
 typing_extensions==4.12.2
+langchain_community==0.3.1
+langchain_text_splitters==0.2.4
+PyPDF2==3.0.1
+pypdf==5.0.1
+load_dotenv==0.1.0
+unstructured==0.15.13
+pi_heif==0.18.0
