feat: review generated answers in batch

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 __pycache__/
 outputs/enhanced_menus/consolidated_menu.json
 outputs/generated_content.json
+outputs/
 inputs/restaurant_info.py
 /data
 .env
